move GOFLAGS to github workflow configuration

--- a/.github/workflows/ppm.yml
+++ b/.github/workflows/ppm.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
+      GOFLAGS: "-mod=vendor"
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
