--- a/activestate.yaml
+++ b/activestate.yaml
@@ -56,11 +56,11 @@ scripts:
   - name: build-ppm
     description: Builds the ppm shim command that is installed with ActivePerl installations
     value: |
-      go build -mod=vendor -o $constants.PPM_BUILD_TARGET $constants.PPM_PKGS
+      go build -o $constants.PPM_BUILD_TARGET $constants.PPM_PKGS
   - name: deploy-ppm
     description: Deploys the PPM shim to s3
     value: |
-      go run -mod=vendor scripts/s3-deployer/main.go $constants.PPM_BUILD_TARGET ca-central-1 cli-update update/ppm/$constants.PPM_BUILD_NAME
+      go run scripts/s3-deployer/main.go $constants.PPM_BUILD_TARGET ca-central-1 cli-update update/ppm/$constants.PPM_BUILD_NAME
   - name: generate-update
     description: Generate update files
     value: |
