Run integration tests on other platforms

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,8 +92,9 @@ jobs:
     steps:
       - checkout
       - <<: *prepareEnv
-      - <<: *runTests
+      # - <<: *runTests
       - <<: *buildCli
+      - <<: *runIntegrationTests
       - <<: *deployBits
       #- <<: *runIntegrationTests
       - <<: *storeArtifacts
