Return CI configs to default

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,9 +92,8 @@ jobs:
     steps:
       - checkout
       - <<: *prepareEnv
-      # - <<: *runTests
+      - <<: *runTests
       - <<: *buildCli
-      - <<: *runIntegrationTests
       - <<: *deployBits
       #- <<: *runIntegrationTests
       - <<: *storeArtifacts
@@ -150,9 +149,8 @@ jobs:
             tar -xzf golang.tar.gz
             popd
       - <<: *prepareEnv
-      # - <<: *runTests
+      - <<: *runTests
       - <<: *buildCli
-      - <<: *runIntegrationTests
       - <<: *deployBits
       #- <<: *runIntegrationTests
       - <<: *storeArtifacts
