Run integration tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,8 +92,9 @@ jobs:
     steps:
       - checkout
       - <<: *prepareEnv
-      - <<: *runTests
+      # - <<: *runTests
       - <<: *buildCli
+      - <<: *runIntegrationTests
       - <<: *deployBits
       #- <<: *runIntegrationTests
       - <<: *storeArtifacts
@@ -149,8 +150,9 @@ jobs:
             tar -xzf golang.tar.gz
             popd
       - <<: *prepareEnv
-      - <<: *runTests
+      # - <<: *runTests
       - <<: *buildCli
+      #- <<: *runIntegrationTests
       - <<: *deployBits
       #- <<: *runIntegrationTests
       - <<: *storeArtifacts
