Troubleshoot integration test

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -52,16 +52,16 @@ jobs:
           ./public/install.sh -b master -n -t $(BINPATH)
         displayName: Install State Tool
       - bash: |
-          set -e
+          # set -e
 
-          export GOFLAGS=-mod=vendor
+          # export GOFLAGS=-mod=vendor
 
-          state run preprocess
+          # state run preprocess
 
-          go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | tee go-test.out
-          go-junit-report < go-test.out > $(Agent.OS)-tests.xml
-          cp go-test.out public/$(Agent.OS)-tests.out
-          cp $(Agent.OS)-tests.xml public
+          # go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | tee go-test.out
+          # go-junit-report < go-test.out > $(Agent.OS)-tests.xml
+          # cp go-test.out public/$(Agent.OS)-tests.out
+          # cp $(Agent.OS)-tests.xml public
         env:
           GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
         displayName: Unit Tests
@@ -81,7 +81,8 @@ jobs:
           SET GOPATH="C:\Users\VssAdministrator\go"
           SET GOFLAGS=-mod=vendor
           SET SHELL=
-          go test -timeout 45m -v -parallel 6 .\test\integration
+          # go test -timeout 45m -v -parallel 6 .\test\integration
+          go test github.com/ActiveState/cli/test/integration -run TestDeployIntegrationTestSuite -v
         env:
           GIT_BRANCH: $(Build.SourceBranch)
           PLATFORM_API_TOKEN: $(PLATFORM_API_TOKEN)
@@ -91,9 +92,9 @@ jobs:
         # condition: eq(variables['Build.Reason'], 'Schedule')
       - task: DownloadSecureFile@1
         name: msiCert
-        displayName: 'Download ActiveState .p12 file'
+        displayName: "Download ActiveState .p12 file"
         inputs:
-          secureFile: 'Comodo-ActiveState-2020-10-09.p12'
+          secureFile: "Comodo-ActiveState-2020-10-09.p12"
       - bash: |
           export GOFLAGS=-mod=vendor
 
@@ -114,9 +115,9 @@ jobs:
       - task: MSBuild@1
         displayName: Build Deploy MSI
         inputs:
-          solution: './public/wix/Deploy/Deploy.sln'
-          platform: 'x64'
-          configuration: 'Release'
+          solution: "./public/wix/Deploy/Deploy.sln"
+          platform: "x64"
+          configuration: "Release"
           msbuildArguments: >
             /target:Build
             /p:RunWixToolsOutOfProc=true
