Build ActivePerl MSI's

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -103,22 +103,17 @@ jobs:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Build State Tool MSI
         condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-      - task: MSBuild@1
-        displayName: Deploy MSI
-        inputs:
-          solution: './installers/msi-language/Deploy/Deploy.sln'
-          platform: 'x64'
-          configuration: 'Release'
-          msbuildArguments: >
-            /target:Build
-            /p:RunWixToolsOutOfProc=true
-        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - bash: |
           set PATH=/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/;%PATH%
-          signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./installers/msi-language/Deploy/bin/Release/Deploy.msi
+
+          state run build-msi-language ActivePerl-5.26
+          signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./build/ActivePerl-5.26.msi
+
+          state run build-msi-language ActivePerl-5.28
+          signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./build/ActivePerl-5.28.msi
+        displayName: Build Language MSI
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
-        displayName: Sign Deploy MSI
         condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - task: PublishBuildArtifacts@1
         inputs:
