--- a/activestate.yaml
+++ b/activestate.yaml
@@ -116,7 +116,15 @@ scripts:
     constraints:
       os: windows
     value: |
-      msbuild.exe installers/msi-language/Deploy.wixproj
+      if [ "$#" -ne 1 ]; then
+        echo "Required Arguments: <Project Name> (must be under the ActiveState org)"
+        exit 1
+      fi
+      dir=$(cmd //C echo %CD%)
+      sed "s/{{PROJECT}}/$1/g" installers/msi-language/Product.p.wxs > installers/msi-language/Product.wxs
+      msbuild.exe installers/msi-language/Deploy.wixproj /target:Build "//p:Configuration=Release;Platform=x64;RunWixToolsOutOfProc=true;OutDir=$dir\\build\\msi-language\\"
+      echo "Copying MSI to build/${1}.msi"
+      cp build/msi-language/en-us/Deploy.msi "build/${1}.msi"
   - name: test
     description: Runs unit tests (not integration tests)
     value: |
