--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -81,6 +81,14 @@ jobs:
           SET GOPATH="C:\Users\VssAdministrator\go"
           SET GOFLAGS=-mod=vendor
           SET SHELL=
+          SET PATH="C:\Windows\System32\WindowsPowershell\v1.0\powershell.exe";%PATH%
+
+          dir "C:\Windows\System32\"
+          echo ""
+          dir "C:\Windows\System32\WindowsPowershell\"
+          echo ""
+          dir "C:\Windows\System32\WindowsPowershell\v1.0"
+          echo ""
           # go test -timeout 45m -v -parallel 6 .\test\integration
           go test github.com/ActiveState/cli/test/integration -run TestDeployIntegrationTestSuite -v
         env:
