Enable MSI build on non-master

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -102,7 +102,7 @@ jobs:
           GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Build State Tool MSI
-        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - bash: |
           set PATH=/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/;%PATH%
 
@@ -114,7 +114,7 @@ jobs:
         displayName: Build Language MSI
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
-        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - task: PublishBuildArtifacts@1
         inputs:
           pathtoPublish: build
