Set PATH without quotes

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -81,7 +81,7 @@ jobs:
           SET GOPATH="C:\Users\VssAdministrator\go"
           SET GOFLAGS=-mod=vendor
           SET SHELL=
-          SET PATH="C:\Windows\System32\WindowsPowershell\v1.0\powershell.exe";%PATH%
+          SET PATH=C:\Windows\System32\WindowsPowershell\v1.0\;%PATH%
 
           dir "C:\Windows\System32\"
           echo ""
