Attempt to fix MSI build

--- a/activestate.yaml
+++ b/activestate.yaml
@@ -107,6 +107,7 @@ scripts:
     constraints:
       os: windows
     value: |
+      $constants.SET_ENV
       go build -o ./installers/msi-state/rmpath/rmpath.exe $constants.CLI_BUILDFLAGS ./installers/msi-state/rmpath/main.go
       candle.exe ./installers/msi-state/install.wxs -o ./installers/msi-state/install.wixobj -ext WixUIExtension -ext WixUtilExtension
       light.exe ./installers/msi-state/install.wixobj -o ./build/state_tool.msi -sice:ICE91 -sice:ICE64 -ext WixUIExtension -ext WixUtilExtension
