--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -95,7 +95,9 @@ jobs:
         inputs:
           secureFile: 'Comodo-ActiveState-2020-10-09.p12'
       - bash: |
-          set PATH=$(pwd)/.azure/wix;/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/;%PATH%
+          set PATH=$(pwd)/.azure/wix:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
+          echo $PATH
+          ls $(pwd)/.azure/wix
           state run build-msi-state
           signtool.exe sign -d "ActiveState State Tool" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) build/state_tool.msi
         env:
@@ -104,7 +106,7 @@ jobs:
         displayName: Build State Tool MSI
         #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - bash: |
-          set PATH=/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/;%PATH%
+          set PATH=/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
 
           state run build-msi-language ActivePerl-5.26
           signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./build/ActivePerl-5.26.msi
