--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -105,7 +105,7 @@ jobs:
         displayName: Build State Tool MSI
         #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - bash: |
-          export PATH=/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
+          export PATH=/c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2019/Community/MSBuild/Current/Bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
 
           state run build-msi-language ActivePerl-5.26
           signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./build/ActivePerl-5.26.msi
