--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -106,13 +106,16 @@ jobs:
         #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - bash: |
           export PATH=/c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2019/Enterprise/MSBuild/Current/Bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
-          find /c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2019/Enterprise
 
           state run build-msi-language ActivePerl-5.26
           signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./build/ActivePerl-5.26.msi
 
           state run build-msi-language ActivePerl-5.28
           signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./build/ActivePerl-5.28.msi
+
+          pwd
+          ls
+          ls build
         displayName: Build Language MSI
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
