Revert integration tests and CI configs to default

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -52,16 +52,16 @@ jobs:
           ./public/install.sh -b master -n -t $(BINPATH)
         displayName: Install State Tool
       - bash: |
-          # set -e
+          set -e
 
-          # export GOFLAGS=-mod=vendor
+          export GOFLAGS=-mod=vendor
 
-          # state run preprocess
+          state run preprocess
 
-          # go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | tee go-test.out
-          # go-junit-report < go-test.out > $(Agent.OS)-tests.xml
-          # cp go-test.out public/$(Agent.OS)-tests.out
-          # cp $(Agent.OS)-tests.xml public
+          go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | tee go-test.out
+          go-junit-report < go-test.out > $(Agent.OS)-tests.xml
+          cp go-test.out public/$(Agent.OS)-tests.out
+          cp $(Agent.OS)-tests.xml public
         env:
           GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
         displayName: Unit Tests
@@ -81,14 +81,14 @@ jobs:
           SET GOPATH="C:\Users\VssAdministrator\go"
           SET GOFLAGS=-mod=vendor
           SET SHELL=
-          go test github.com/ActiveState/cli/test/integration -run TestDeployIntegrationTestSuite/TestDeploySymlink -v
+          go test -timeout 45m -v -parallel 6 .\test\integration
         env:
           GIT_BRANCH: $(Build.SourceBranch)
           PLATFORM_API_TOKEN: $(PLATFORM_API_TOKEN)
           INTEGRATION_TEST_USERNAME: $(INTEGRATION_TEST_USERNAME)
           INTEGRATION_TEST_PASSWORD: $(INTEGRATION_TEST_PASSWORD)
         displayName: Windows Integration Tests
-        # condition: eq(variables['Build.Reason'], 'Schedule')
+        condition: eq(variables['Build.Reason'], 'Schedule')
       - task: DownloadSecureFile@1
         name: msiCert
         displayName: "Download ActiveState .p12 file"
