Revert quotes in azure config

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -91,9 +91,9 @@ jobs:
         condition: eq(variables['Build.Reason'], 'Schedule')
       - task: DownloadSecureFile@1
         name: msiCert
-        displayName: "Download ActiveState .p12 file"
+        displayName: 'Download ActiveState .p12 file'
         inputs:
-          secureFile: "Comodo-ActiveState-2020-10-09.p12"
+          secureFile: 'Comodo-ActiveState-2020-10-09.p12'
       - bash: |
           export GOFLAGS=-mod=vendor
 
@@ -114,9 +114,9 @@ jobs:
       - task: MSBuild@1
         displayName: Build Deploy MSI
         inputs:
-          solution: "./public/wix/Deploy/Deploy.sln"
-          platform: "x64"
-          configuration: "Release"
+          solution: './public/wix/Deploy/Deploy.sln'
+          platform: 'x64'
+          configuration: 'Release'
           msbuildArguments: >
             /target:Build
             /p:RunWixToolsOutOfProc=true
