--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -107,10 +107,10 @@ jobs:
       - bash: |
           export PATH=/c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2019/Enterprise/MSBuild/Current/Bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
 
-          state run build-msi-language ActivePerl-5.26
+          state run build-msi-language ActivePerl-5.26 http://docs.activestate.com/activeperl/5.26/get/relnotes/
           signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./build/ActivePerl-5.26.msi
 
-          state run build-msi-language ActivePerl-5.28
+          state run build-msi-language ActivePerl-5.28 http://docs.activestate.com/activeperl/5.28/get/relnotes/
           signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./build/ActivePerl-5.28.msi
 
           pwd
