--- a/activestate.yaml
+++ b/activestate.yaml
@@ -117,12 +117,15 @@ scripts:
     constraints:
       os: windows
     value: |
-      if [ "$#" -ne 1 ]; then
-        echo "Required Arguments: <Project Name> (must be under the ActiveState org)"
+      set -e
+      if [ "$#" -ne 2 ]; then
+        echo "Required Arguments: <Project Name> <Release Notes URL> (must be under the ActiveState org)"
         exit 1
       fi
       dir=$(cmd //C echo %CD%)
-      sed "s/{{PROJECT}}/$1/g" installers/msi-language/Product.p.wxs > installers/msi-language/Product.wxs
+      cp installers/msi-language/Product.p.wxs installers/msi-language/Product.wxs
+      sed -i "s^{{PROJECT}}^${1}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{REL_NOTES}}^${2}^g" installers/msi-language/Product.wxs
       msbuild.exe installers/msi-language/Deploy.wixproj /target:Build "//p:Configuration=Release;Platform=x64;RunWixToolsOutOfProc=true;OutDir=$dir\\build\\msi-language\\"
       echo "Copying MSI to build/${1}.msi"
       cp build/msi-language/en-us/Deploy.msi "build/${1}.msi"
