Ensure ID is unique per language version

--- a/activestate.yaml
+++ b/activestate.yaml
@@ -122,10 +122,12 @@ scripts:
         echo "Required Arguments: <Project Name> <Release Notes URL> (must be under the ActiveState org)"
         exit 1
       fi
+      export GOFLAGS='-mod=vendor'
       dir=$(cmd //C echo %CD%)
       cp installers/msi-language/Product.p.wxs installers/msi-language/Product.wxs
       sed -i "s^{{PROJECT}}^${1}^g" installers/msi-language/Product.wxs
       sed -i "s^{{REL_NOTES}}^${2}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{ID}}^$(go run scripts/uuid-generator/main.go $1)^g" installers/msi-language/Product.wxs
       msbuild.exe installers/msi-language/Deploy.wixproj /target:Build "//p:Configuration=Release;Platform=x64;RunWixToolsOutOfProc=true;OutDir=$dir\\build\\msi-language\\"
       echo "Copying MSI to build/${1}.msi"
       cp build/msi-language/en-us/Deploy.msi "build/${1}.msi"
