--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -16,7 +16,7 @@ build:
   runs-on: *runs-on
   env: *env
   steps:
-    - name: Checkout code
+    - name: "Checkout code"
       uses: actions/checkout@v2
     - #@ steps_installgo()
     - #@ steps_installstate()
@@ -26,27 +26,27 @@ build:
 
 #@ def jobs_unittest():
 unit-test:
-  name: Unit Test
+  name: "Unit Test"
   strategy: *strategy
   runs-on: *runs-on
   env: *env
   steps:
-    - name: Checkout code
+    - name: "Checkout code"
       uses: actions/checkout@v2
     - #@ steps_installgo()
     - #@ steps_installstate()
-    - name: Unit Tests
-      run: go test -v -covermode=atomic -coverprofile=c.out `$GOROOT/bin/go list ./... | grep -v api | grep -v integration | grep -v expect`
+    - name: "Unit Tests"
+      run: "go test -v -covermode=atomic -coverprofile=c.out `$GOROOT/bin/go list ./... | grep -v api | grep -v integration | grep -v expect`"
 #@ end
 
 #@ def jobs_inttest():
 build:
-  name: Integration Test
+  name: "Integration Test"
   strategy: *strategy
   runs-on: *runs-on
   env: *env
   steps:
-    - name: Checkout code
+    - name: "Checkout code"
       uses: actions/checkout@v2
     - #@ steps_installgo()
     - #@ steps_installstate()
