--- a/.github/workflows-src/build.yml
+++ b/.github/workflows-src/build.yml
@@ -1,4 +1,4 @@
-#@ load("jobs.lib.yml", "jobs_build", "jobs_unittest")
+#@ load("jobs.lib.yml", "jobs_build", "jobs_deploy", "jobs_unittest")
 name: Build-Test-Deploy
 
 "on":
@@ -10,3 +10,4 @@ name: Build-Test-Deploy
 jobs:
   build: #@ jobs_build()
   unittest: #@ jobs_unittest()
+  deploy: #@ jobs_deploy()
