Properly identify branch

--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -1,9 +1,9 @@
 #@ def steps_build():
 name: Build
 run: |
-  BRANCH=$(git rev-parse --abbrev-ref HEAD)
-  if [[ "$BRANCH" == "master" ]]; then
-  export BRANCH_OVERRIDE=unstable
+  echo "Branch: $GITHUB_HEAD_REF"
+  if [[ "$GITHUB_HEAD_REF" == "master" ]]; then
+    export BRANCH_OVERRIDE=unstable
   fi
   state run build
 #@ end
