--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,3 +97,6 @@ jobs:
         path: build/
     - name: Deploy
       run: state run deploy-updates
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
