--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -56,7 +56,9 @@ with:
 ---
 #@ def steps_deploy():
 name: "Deploy"
-run: state run deploy-updates
+run: |
+  state run deploy-updates
+  state run deploy-installers
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
