--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
         go-version:
         - 1.13.x
         platform:
-        - ubuntu-latest
+        - macos-latest
     runs-on: ${{ matrix.platform }}
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
@@ -49,7 +49,7 @@ jobs:
         go-version:
         - 1.13.x
         platform:
-        - ubuntu-latest
+        - macos-latest
     runs-on: ${{ matrix.platform }}
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
